packages/elvis/src/components/alert.scss
@use '../variables/typography.scss';
@use '../variables/colors';
@use '../utilities/shadows';
@use '../utilities/icons.scss';
@use '../utilities/breakpoints';
@use '../utilities/helpers';

$local-padding: 22px 30px 22px 22px; // -2px for border;
$local-mobile-padding: 14px; // -2px for border;
$local-max-width: 650px;

$global-padding: 22px;
$global-mobile-padding: 22px 14px; // -2px border
$global-mobile-notitle-padding: 14px; // -2px border

$toast-padding: 14px; // -2px border
$toast-max-width: 400px;

.e-alert {
  display: inline-flex;
  box-sizing: border-box;
  border: 2px solid colors.color('red');
  background: colors.color('elvia-on');
  flex-direction: row;
  min-width: 270px;
  text-align: left;
  position: relative;

  // Local as default
  &:not(.e-alert--global):not(.e-alert--toast) {
    @extend .e-alert--local;
  }

  &__icon {
    display: flex;
    margin-right: 24px;
    width: 32px;
    @include breakpoints.breakpoint-up(Mobile) {
      align-items: center;
      margin-right: 16px;
      margin-top: 0px;
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    .e-alert__title {
      @include typography.typography('title-caps');
      text-align: left;
      color: colors.color('font-color');
      margin-bottom: 2px;
    }
    .e-alert__text {
      @include typography.typography('text-md');
      text-align: left;
      color: colors.color('font-color');
      max-width: 758px;
      ul {
        margin: 0;
        margin-top: 8px;
        padding: 0;
        padding-left: 17px;
        @include breakpoints.breakpoint-up(Mobile) {
          display: flex;
          flex-direction: column;
          align-items: center;
        }
      }
    }
    .e-alert__links {
      margin-top: 16px;
      height: 26px;
      a:not(:last-of-type) {
        margin-right: 24px;
      }
    }
  }

  &__close {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    margin-top: 8px;
    padding-left: 16px;
    margin-left: auto;
    width: 56px;

    @include breakpoints.breakpoint-up(Mobile) {
      align-items: center;
      margin-top: 0px;
    }
  }

  // GLOBAL
  &.e-alert--global {
    width: 100%;
    max-width: unset;
    border-color: colors.color('grey');
    padding: $global-padding;
    @include breakpoints.breakpoint-up(Mobile) {
      padding: $global-mobile-padding;
    }

    .e-alert__icon,
    .e-alert__close {
      margin-top: 0px;
      align-items: center;
    }
    .e-alert__close {
      padding-left: 24px;
      @include breakpoints.breakpoint-up(Mobile) {
        padding-left: 16px;
      }
    }
    .e-alert__content .e-alert__title {
      @include typography.typography('title-xs');
      color: colors.color('font-color');
    }

    &.e-alert--warn {
      border-color: colors.color('orange');
    }
    &.e-alert--error {
      border-color: colors.color('red');
    }
    &.e-alert--expandable {
      .e-alert__icon {
        margin-top: 0px;
      }
      .e-alert__content,
      .e-alert__title {
        width: 100%;
      }
      .e-alert__title {
        display: flex;
        align-items: center;
        justify-content: space-between;
        min-height: 32px;

        .e-alert__accordion {
          @include helpers.keyframes(rotate-center-forward) {
            0% {
              @include helpers.transform(rotate(180deg));
            }
            100% {
              @include helpers.transform(rotate(0));
            }
          }
          -o-animation: rotate-center-forward 0.2s ease-in-out both;
          -moz-animation: rotate-center-forward 0.2s ease-in-out both;
          -webkit-animation: rotate-center-forward 0.2s ease-in-out both;
          animation: rotate-center-forward 0.2s ease-in-out both;

          display: flex;
          margin-left: 24px;
          @include icons.icon-size('sm');
          i[class*='expand_circle-filled-color'] {
            display: none;
          }
        }

        &:hover {
          cursor: pointer;
          i[class*='expand_circle-color'] {
            display: none;
          }
          i[class*='expand_circle-filled-color'] {
            display: flex;
          }
        }
      }
      .e-alert__text {
        max-height: 0;
        opacity: 0;
        margin-top: 0;
        transition: max-height 0.18s cubic-bezier(0, 0.18, 0.9, 1),
          opacity 0.17s cubic-bezier(0.4, 0.01, 0.78, 1.1), margin-top 0.17s cubic-bezier(0, 0.18, 1, 1);
        width: 100%;
        pointer-events: none;
        overflow: hidden;
      }
      &.e-alert--open {
        .e-alert__accordion {
          @include helpers.keyframes(rotate-center-back) {
            0% {
              @include helpers.transform(rotate(0));
            }
            100% {
              @include helpers.transform(rotate(180deg));
            }
          }
          animation: rotate-center-back 0.2s ease-in-out both;
        }
        .e-alert__icon {
          margin-top: 2px;
          align-items: flex-start;
        }
        .e-alert__title {
          margin-bottom: 4px;
        }
        .e-alert__text {
          pointer-events: auto;
          max-height: 10000px;
          opacity: 1;
          transition: 0.25s cubic-bezier(0.4, 0.01, 0.12, 0.32), opacity 0.3s cubic-bezier(0, 0.3, 0.83, 0.97),
            margin-top 0.1s cubic-bezier(0, 0.3, 0.83, 0.97);
        }
      }
      @include breakpoints.breakpoint-up(Mobile) {
        .e-alert__icon {
          align-items: flex-start;
        }
        &.e-alert--open .e-alert__text {
          margin-top: 16px;
          margin-left: -47px;
          width: calc(100% + 47px);
        }
      }
    }
  }

  // LOCAL
  &.e-alert--local {
    border-radius: 8px;
    width: 100%;
    max-width: $local-max-width;
    padding: $local-padding;
    @include breakpoints.breakpoint-up(Mobile) {
      padding: $local-mobile-padding;
    }

    .e-alert__icon {
      margin-top: 11px;
    }
    .e-alert__title {
      @include typography.typography('text-md-strong');
      color: colors.color('font-color');
      margin-bottom: 0px;
    }
    .e-alert__close {
      justify-content: flex-end;
      align-items: flex-start;
      margin-top: -14px;
      margin-right: -22px;
    }

    &.e-alert--warn {
      border-color: colors.color('orange');
    }
    &.e-alert--info {
      border-color: colors.color('grey');
    }

    @include breakpoints.breakpoint-up(Mobile) {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      .e-alert__icon {
        margin-right: 0px;
        margin-top: 0px;
      }
      .e-alert__content {
        margin-top: 8px;
      }
      .e-alert__title,
      .e-alert__text {
        text-align: center;
      }
    }
  }

  // TOAST
  &.e-alert--toast {
    border-radius: 8px;
    border-color: colors.color('elvia-charge');
    box-shadow: shadows.getShadow('medium');
    max-width: $toast-max-width;
    padding: $toast-padding;

    .e-alert__icon {
      margin-top: 0px;
      align-items: center;
      width: 24px;
      margin-right: 16px;
      i {
        @include icons.icon-size('sm');
      }
    }
    .e-alert__title {
      @include typography.typography('text-sm-strong');
      color: colors.color('font-color');
    }
    .e-alert__content .e-alert__text {
      @include typography.typography('text-sm');
      color: colors.color('font-color');
    }
    .e-alert__close {
      justify-content: flex-end;
      align-items: flex-start;
      margin-top: -8px;
      margin-right: -8px;
    }

    &.e-alert--info {
      border-color: colors.color('grey');
    }
  }

  // NO TITLE
  &.e-alert--no-title {
    &.e-alert--global {
      @include breakpoints.breakpoint-up(Mobile) {
        padding: $global-mobile-notitle-padding;
      }
    }
  }

  // ACTIONS
  &.e-alert--actions {
    .e-alert__icon {
      margin-top: 0px;
      align-items: center;
      @include breakpoints.breakpoint-up(Mobile) {
        margin-top: 16px;
        align-items: flex-start;
      }
    }
    .e-alert__content {
      flex-direction: row;
      justify-content: flex-start;
      width: 100%;
      .e-alert__text {
        display: flex;
        align-items: center;
      }
      .e-alert__actions {
        // IE hack
        @media screen and (-ms-high-contrast: none) {
          width: 100%;
        }
        display: flex;
        align-items: center;
        padding-left: 24px;
        margin-left: auto;
        button:last-of-type {
          margin-left: 24px;
        }
        @include breakpoints.breakpoint-up(Mobile) {
          padding-left: 0px;
          margin-top: 16px;
          margin-left: -47px;
          width: calc(100% + 47px);
          button {
            width: 100%;
          }
        }
      }
      @include breakpoints.breakpoint-up(Mobile) {
        flex-direction: column;
      }
    }
  }
}

